# musicdl-py

./: .gitignore  .pre-commit-config.yaml  README.md  musicdl_old.py.bak  pyproject.toml  test_urls.txt
docs/: usage.md
examples/: sample_tracks.csv
src/musicdl/: __init__.py  __main__.py  cli.py  config.py
src/musicdl/core/: __init__.py  csv_parser.py  downloader.py  models.py  url_processor.py
src/musicdl/ui/: __init__.py  app.py  base_screen.py  components.py  main_app.py  menu.py  styles.py  url_app.py
src/musicdl/utils/: __init__.py  bootstrap.py  file_utils.py  logging.py
tests/: __init__.py  test_config.py  test_csv_parser.py  test_downloader.py  test_file_utils.py  test_security.py  test_url_processor.py
